--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Welcome</h1>
+  h1>Welcome</h1>
+  <p>to the future<p>
+
+    <h1>Welcome</h1>
+    <p>to the future<p>
 
 </body>
 </html>
