--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   h1>Welcome</h1>
-  <p>to the future<p>
+  <p>to the future</p>
 
     <h1>Welcome</h1>
-    <p>to the future<p>
+    <p>to the future</p>
+
+    <h2>i think its a cool tillejjgsjhgfhs</h2>   
 
 </body>
 </html>
